# ai-examples

./: .gitignore  DEMO.md  README.md  callback.py  ide.py  main.py  package-lock.json  package.json  requirements.txt  toolbelt.py
ai-written-code/: constant.js  constant.js.describe  helper.js  helper.js.describe  main.js  main.js.describe
apps/original/: README.md  library_loader.py  main.py  project.json  pyproject.toml  requirements.txt
apps/original/original/: __init__.py  index.py
data/srd/: srd5-1-creative-commons.md
ide_tools/: FileManager.py
libs/module-library/: README.md  project.json  pyproject.toml
libs/module-library/modulez/: __init__.py  chain_concatenate.py  index.py
libs/module-library/tests/: test_index.py
modules/: ConcatenateChain.py  callback_custom.py  chain_concatenate.py  llm_makersuite.py  llm_mpt7b.py  llm_quantized.py  llm_vicuna7b.py
original/: project.json  pyproject.toml
original/modules/: llm_makersuite.py
original/tests/: test_index.py
tools/: DND5E.py  DiceRoller.py  EquationSolver.py  Wikipedia.py  dndSRD.py  srdReader.py
