[tool.coverage.run]
branch = true
source = [ "original" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../coverage/./original/html' --cov-report xml:'../coverage/./original/coverage.xml' --junitxml='../reports/./original/unittests/junit.xml' --html='../reports/./original/unittests/html/index.html'"

[tool.poetry]
name = "original"
version = "1.0.0"
description = "&#39;original"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "original"

  [tool.poetry.dependencies]
  python = ">=3.8.1,<3.11"
  langchain = "0.0.189"
  accelerate = "0.18.0"
  aiofiles = "23.1.0"
  aiohttp = "3.8.4"
  aiosignal = "1.3.1"
  altair = "4.2.2"
  anyio = "3.6.2"
  argilla = "1.6.0"
  async-timeout = "4.0.2"
  attrs = "23.1.0"
  auto-gptq = "0.1.0"
  backoff = "2.2.1"
  beautifulsoup4 = "4.12.2"
  bs4 = "0.0.1"
  cachetools = "5.3.0"
  certifi = "2022.12.7"
  cffi = "1.15.1"
  charset-normalizer = "3.1.0"
  chromadb = "0.3.21"
  click = "8.1.3"
  clickhouse-connect = "0.5.23"
  colorama = "0.4.6"
  commonmark = "0.9.1"
  contourpy = "1.0.7"
  cppimport = "22.8.2"
  cryptography = "40.0.2"
  cycler = "0.11.0"
  dataclasses-json = "0.5.7"
  datasets = "2.12.0"
  deprecated = "1.2.13"
  dill = "0.3.6"
  diskcache = "5.6.1"
  duckdb = "0.7.1"
  duckduckgo-search = "2.9.3"
  einops = "0.6.1"
  entrypoints = "0.4"
  et-xmlfile = "1.1.0"
  fastapi = "0.95.1"
  ffmpy = "0.3.0"
  filelock = "3.12.0"
  fonttools = "4.39.3"
  frozenlist = "1.3.3"
  fsspec = "2023.4.0"
  google-ai-generativelanguage = "0.2.0"
  google-api-core = "2.11.0"
  google-auth = "2.18.0"
  googleapis-common-protos = "1.59.0"
  gradio = "3.28.1"
  gradio-client = "0.1.4"
  greenlet = "2.0.1"
  grpcio = "1.54.2"
  grpcio-status = "1.54.2"
  h11 = "0.14.0"
  hnswlib = "0.7.0"
  httpcore = "0.16.3"
  httptools = "0.5.0"
  httpx = "0.23.3"
  huggingface-hub = "0.13.4"
  idna = "3.4"
  importlib-metadata = "6.6.0"
  importlib-resources = "5.12.0"
  jinja2 = "3.1.2"
  joblib = "1.2.0"
  jsonschema = "4.17.3"
  kiwisolver = "1.4.4"
  linkify-it-py = "2.0.2"
  llama-cpp-python = "0.1.39"
  loralib = "0.1.1"
  lxml = "4.9.2"
  lz4 = "4.3.2"
  mako = "1.2.4"
  markdown = "3.4.3"
  markdown-it-py = "2.2.0"
  markupsafe = "2.1.2"
  marshmallow = "3.19.0"
  marshmallow-enum = "1.5.1"
  matplotlib = "3.7.1"
  mdit-py-plugins = "0.3.3"
  mdurl = "0.1.2"
  monotonic = "1.6"
  mpmath = "1.2.1"
  msg-parser = "1.2.0"
  multidict = "6.0.4"
  multiprocess = "0.70.14"
  mypy-extensions = "1.0.0"
  nest-asyncio = "1.5.6"
  networkx = "3.0"
  nltk = "3.8.1"
  numexpr = "2.8.4"
  numpy = "1.23.5"
  olefile = "0.46"
  openai = "0.27.6"
  openapi-schema-pydantic = "1.2.4"
  openpyxl = "3.1.2"
  orjson = "3.8.11"
  packaging = "23.1"
  pandas = "1.5.3"
  pdfminer-six = "20221105"
  peft = "0.3.0"
  pillow = "9.3.0"
  playwright = "1.33.0"
  posthog = "3.0.1"
  proto-plus = "1.22.2"
  protobuf = "4.23.0"
  psutil = "5.9.5"
  pyarrow = "12.0.0"
  pyasn1 = "0.5.0"
  pyasn1-modules = "0.3.0"
  pybind11 = "2.10.4"
  pycparser = "2.21"
  pydantic = "1.10.7"
  pydash = "7.0.3"
  pydub = "0.25.1"
  pyee = "9.0.4"
  pygments = "2.15.1"
  pypandoc = "1.11"
  pyparsing = "3.0.9"
  pyrsistent = "0.19.3"
  python-dateutil = "2.8.2"
  python-docx = "0.8.11"
  python-dotenv = "1.0.0"
  python-magic = "0.4.27"
  python-multipart = "0.0.6"
  python-pptx = "0.6.21"
  pytz = "2023.3"
  pyyaml = "6.0"
  regex = "2023.3.23"
  requests = "2.30.0"
  responses = "0.18.0"
  rfc3986 = "1.5.0"
  rich = "13.0.1"
  rouge = "1.0.1"
  rsa = "4.9"
  safetensors = "0.3.1"
  scikit-learn = "1.2.2"
  scipy = "1.10.1"
  semantic-version = "2.10.0"
  sentence-transformers = "2.2.2"
  sentencepiece = "0.1.98"
  six = "1.16.0"
  sniffio = "1.3.0"
  soupsieve = "2.4.1"
  sqlalchemy = "1.4.47"
  starlette = "0.26.1"
  sympy = "1.11.1"
  tenacity = "8.2.2"
  threadpoolctl = "3.1.0"
  tiktoken = "0.3.3"
  tokenizers = "0.13.3"
  toolz = "0.12.0"
  tqdm = "4.65.0"
  transformers = "4.28.1"
  typing-inspect = "0.8.0"
  typing-extensions = "4.5.0"
  tzdata = "2023.3"
  uc-micro-py = "1.0.2"
  unstructured = "0.6.3"
  urllib3 = "1.26.15"
  uvicorn = "0.22.0"
  watchfiles = "0.19.0"
  websockets = "11.0.2"
  wikipedia = "1.4.0"
  wrapt = "1.14.1"
  xlsxwriter = "3.1.0"
  xxhash = "3.2.0"
  yarl = "1.9.1"
  zipp = "3.15.0"
  zstandard = "0.21.0"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
